<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 © Johnnie Ruffin
  ~
  ~ Unless required by applicable law or agreed to in writing, software is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~
  -->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableRow
    android:id="@+id/tableRow1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        >

        <ImageButton
            android:id="@+id/playbtn"
            android:background="@drawable/ic_play"
            android:contentDescription="@string/play_button"
           />

        <ImageButton
            android:id="@+id/stopbtn"
            android:contentDescription="@string/stop_button"
            />
        <ImageButton
            android:id="@+id/downloadbtn"
            android:contentDescription="@string/download_button"
            />

        <TextView
            android:id="@+id/txt"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <ImageButton
            android:id="@+id/closebtn"
            android:contentDescription="@string/close_button"
            />

        <ImageButton
            android:id="@+id/deletebtn"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/delete_button"
            />

    </TableRow>

    <TableRow
    android:id="@+id/tableRow2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
     >
       <TextView
           android:id="@+id/txt2"
           android:layout_span="3"
           android:textAppearance="?android:attr/textAppearanceLarge" />
        />

    </TableRow>

</TableLayout>