<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 © Johnnie Ruffin
  ~
  ~ Unless required by applicable law or agreed to in writing, software is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:showIn="@layout/activity_comedy"
    tools:context="com.RuffinApps.johnnie.oldtimeradio.ComedyActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:showIn="@layout/activity_comedy"
                tools:context="com.RuffinApps.johnnie.oldtimeradio.ComedyActivity">
                <TableLayout
                    android:id="@+id/tableLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="5dip">

                        <Button
                            android:id="@+id/imageBtn1"
                            style="@android:style/Widget.Button"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:adjustViewBounds="false"
                            android:contentDescription="@string/BurnsAndAllenImage"
                            android:background="@mipmap/burnsandallen" />

                        <Button
                            android:id="@+id/fbBtn"
                            style="@android:style/Widget.Button"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginStart="20dp"
                            android:contentDescription="@string/FibberMcGeeImage"
                            android:background="@mipmap/fibber_and_molly_" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dip" >

                        <Button
                            android:id="@+id/mlBtn"
                            style="@android:style/Widget.Button"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginTop="15dp"
                            android:contentDescription="@string/MartinAndLewisImage"
                            android:background="@mipmap/lewis_and_martin" />

                        <Button
                            android:id="@+id/gilBtn"
                            style="@android:style/Widget.Button"
                            android:layout_marginTop="15dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:background="@mipmap/greatgildersleeve"
                            android:contentDescription="@string/GilderSleeveImage"
                            />
                    </TableRow>
                    <TableRow
                        android:id="@+id/tableRow3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dip" >

                        <Button
                            android:id="@+id/jbBtn"
                            style="@android:style/Widget.Button"
                            android:layout_marginTop="15dp"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:background="@mipmap/jackbenny_fixed"
                            android:contentDescription="@string/JackBennyImage"
                            />

                        <Button
                            android:id="@+id/bhBtn"
                            style="@android:style/Widget.Button"
                            android:layout_marginTop="15dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:background="@mipmap/bob_hope_1950_0_fixed_0"
                            android:contentDescription="@string/BobHopeImage"
                            />
                    </TableRow>
                    <TableRow
                        android:id="@+id/tableRow4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="1dip" >

                        <Button
                            android:id="@+id/mbBtn"
                            style="@android:style/Widget.Button"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:background="@mipmap/ourmissbrooks"
                            android:contentDescription="@string/OurMissBrooksImage"
                            />

                        <Button
                            android:id="@+id/fkBtn"
                            style="@android:style/Widget.Button"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:background="@mipmap/fatherknowsbest"
                            android:contentDescription="@string/FatherKnowsBestImage"
                            />
                    </TableRow>
                    <TableRow
                        android:id="@+id/tableRow5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="1dip" >

                        <Button
                            android:id="@+id/ohBtn"
                            style="@android:style/Widget.Button"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:background="@mipmap/ozzieandharriet"
                            android:contentDescription="@string/OzzieAndHarrietImage"
                            />

                        <Button
                            android:id="@+id/orBtn"
                            style="@android:style/Widget.Button"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:background="@mipmap/lifeofriley"
                            android:contentDescription="@string/LifeOfRileyImage"
                            />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="1dip" >
                        <Button
                            android:id="@+id/blBtn"
                            style="@android:style/Widget.Button"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginTop="15dp"
                            android:contentDescription="@string/Blondie"
                            android:background="@mipmap/blondie" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>
</RelativeLayout>