<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 © Johnnie Ruffin
  ~
  ~ Unless required by applicable law or agreed to in writing, software is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_sci_fi"
    tools:context="com.RuffinApps.johnnie.oldtimeradio.SciFiActivity">

    <ImageButton
        android:id="@+id/xm1Btn"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:src="@drawable/xminusone"
        android:contentDescription="@string/XMinus1"/>

    <ImageButton
        android:id="@+id/innSancBtn"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:layout_toEndOf="@id/xm1Btn"
        android:layout_toRightOf="@id/xm1Btn"
        android:src="@drawable/inner_sanctum"
        android:contentDescription="@string/InnerSactum"
        />

    <ImageButton
        android:id="@+id/dxBtn"
        android:layout_marginTop="15dp"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:layout_below="@id/xm1Btn"
        android:src="@drawable/dimension_x"
        android:contentDescription="@string/DimensionX"/>

</RelativeLayout>
